--- a/app/src/main/res/layout/fragment_archive.xml
+++ b/app/src/main/res/layout/fragment_archive.xml
@@ -17,6 +17,7 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:orientation="vertical"
+            android:overScrollMode="never"
             android:paddingBottom="72dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -27,8 +28,57 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:overScrollMode="never">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/img_not_found"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center_horizontal"
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_search_not_found" />
+
+            <TextView
+                android:id="@+id/lbl_not_found"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/lbl_search_not_found"
+                android:textAppearance="?attr/textAppearanceHeadline4"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/img_start_search"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/ic_start_search" />
+
+            <TextView
+                android:id="@+id/lbl_start_search"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/lbl_start_search"
+                android:textAppearance="?attr/textAppearanceHeadline4" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/btn_filters"
+        android:id="@+id/btn_open_filters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
@@ -44,13 +94,11 @@
         android:layout_height="match_parent"
         android:background="?attr/backgroundColor"
         android:clickable="true"
-        android:orientation="vertical"
-        android:paddingBottom="16dp"
         app:behavior_hideable="true"
         app:behavior_skipCollapsed="true"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         tools:ignore="KeyboardInaccessibleWidget"
-        tools:visibility="visible">
+        tools:visibility="gone">
 
         <View
             android:layout_width="0dp"
@@ -92,108 +140,144 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="60dp" />
 
-        <TextView
-            android:id="@+id/lbl_currency_pair"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/lbl_currency_pairs"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            app:layout_constraintStart_toStartOf="@id/btn_close_filters"
-            app:layout_constraintTop_toBottomOf="@id/gl_toolbar" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_currency_pair"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:minHeight="50dp"
-            android:nestedScrollingEnabled="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
-            app:layout_constraintTop_toBottomOf="@id/lbl_currency_pair"
-            tools:itemCount="1"
-            tools:listitem="@layout/item_chip_filter" />
-
-        <TextView
-            android:id="@+id/lbl_date_from"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/lbl_date_from"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            app:layout_constraintStart_toStartOf="@id/btn_close_filters"
-            app:layout_constraintTop_toBottomOf="@id/recycler_currency_pair" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_date_from"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/lbl_filters"
-            app:layout_constraintStart_toStartOf="@id/btn_close_filters"
-            app:layout_constraintTop_toBottomOf="@id/lbl_date_from">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:hint="@string/hint_choose_date"
-                tools:ignore="KeyboardInaccessibleWidget" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/lbl_date_to"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/lbl_date_to"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            app:layout_constraintStart_toStartOf="@id/btn_close_filters"
-            app:layout_constraintTop_toBottomOf="@id/til_date_from" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_date_to"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="@id/lbl_filters"
-            app:layout_constraintStart_toStartOf="@id/btn_close_filters"
-            app:layout_constraintTop_toBottomOf="@id/lbl_date_to">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clickable="true"
-                android:cursorVisible="false"
-                android:focusable="false"
-                android:hint="@string/hint_choose_date"
-                tools:ignore="KeyboardInaccessibleWidget" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_accept_filters"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:text="@string/lbl_accept"
-            android:textAllCaps="false"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/lbl_filters"
-            app:layout_constraintStart_toStartOf="@id/btn_close_filters"
-            app:layout_constraintTop_toBottomOf="@id/til_date_to"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gl_toolbar">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="16dp">
+
+                <TextView
+                    android:id="@+id/lbl_currency_pair"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/lbl_currency_pairs"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <!-- Preview for FlexboxLayoutManager doesn't work -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_currency_pair"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:nestedScrollingEnabled="true"
+                    android:overScrollMode="never"
+                    app:layout_constraintEnd_toEndOf="@id/lbl_currency_pair"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_currency_pair"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/item_chip_currency_pair" />
+
+                <TextView
+                    android:id="@+id/lbl_currency_pair_error"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/error_choose_currency_pair"
+                    android:textColor="?attr/colorError"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="@id/lbl_currency_pair"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/recycler_currency_pair"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/lbl_date_from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/lbl_date_from"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_currency_pair_error" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_date_from"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="@id/lbl_currency_pair"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_date_from">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/btn_date_from"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:hint="@string/hint_choose_date"
+                        tools:ignore="KeyboardInaccessibleWidget" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <TextView
+                    android:id="@+id/lbl_date_to"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/lbl_date_to"
+                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/til_date_from" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_date_to"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="@id/lbl_currency_pair"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/lbl_date_to">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/btn_date_to"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:cursorVisible="false"
+                        android:focusable="false"
+                        android:hint="@string/hint_choose_date"
+                        tools:ignore="KeyboardInaccessibleWidget" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_accept_filters"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:text="@string/lbl_accept"
+                    android:textAllCaps="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@id/lbl_currency_pair"
+                    app:layout_constraintStart_toStartOf="@id/lbl_currency_pair"
+                    app:layout_constraintTop_toBottomOf="@id/til_date_to"
+                    app:layout_constraintVertical_bias="1.0" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
