--- a/app/src/main/res/layout/item_chip_currency_pair.xml
+++ b/app/src/main/res/layout/item_chip_currency_pair.xml
@@ -5,10 +5,12 @@
     android:id="@+id/chip"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="4dp"
     android:layout_marginBottom="8dp"
+    android:checkable="true"
     android:stateListAnimator="@null"
     android:textAlignment="center"
-    app:checkedIconEnabled="false"
-    app:chipIconVisible="false"
+    app:checkedIcon="@drawable/ic_check"
+    app:checkedIconEnabled="true"
     app:ensureMinTouchTargetSize="false"
     tools:text="GBPUSD" />
